Add ContributorsFromGit to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,9 @@ copyright_year   = 2013
 ; add $VERSION to module
 [PkgVersion]
 
+; gather contributors
+[ContributorsFromGit]
+
 ; generate pod sections
 [PodWeaver]
 
